# oxifed

./: .dockerignore  .gitignore  AI_OVERDONE_README.md  ARCHITECTURE.md  CHANGELOG.md  CI_CD.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  Cargo.toml  DESIGN.md  DOCUMENTATION.md  HTTP_SIGNATURES.md  KUBERNETES.md  README.md  cliff.toml  docker-compose.yml  generate_ed25519_keys.sh  sample-collection.json  sample-outbox.json  sample-webfinger.json  test_actor_keys.rs  test_dual_mode_keys.json
.cargo/: audit.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  RELEASE_TEMPLATE.md  SOCIAL_MEDIA.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/workflows/: ci.yml  e2e.yml  pr.yml  release.yml
crates/adminservd/: Cargo.toml
crates/adminservd/src/: auth.rs  error.rs  main.rs  messaging.rs
crates/adminservd/src/routes/: activities.rs  domains.rs  health.rs  keys.rs  mod.rs  notes.rs  persons.rs  users.rs
crates/domainservd/: CHANGELOG.md  Cargo.toml  README.md
crates/domainservd/src/: activitypub.rs  db.rs  main.rs  rabbitmq.rs  webfinger.rs
crates/domainservd/src/delivery/: mod.rs
crates/domainservd/webfinger/: example@domain.com.json
crates/oxiadm/: CHANGELOG.md  Cargo.toml  README.md
crates/oxiadm/src/: auth.rs  client.rs  context.rs  db.rs  main.rs  messaging.rs  resolve.rs
crates/oxifed-operator/: CHANGELOG.md  Cargo.toml  README.md
crates/oxifed-operator/src/: main.rs
crates/publisherd/: CHANGELOG.md  Cargo.toml  README.md
crates/publisherd/src/: main.rs
docker/adminservd/: Dockerfile
docker/domainservd/: Dockerfile
docker/oxifed-operator/: Dockerfile
docker/publisherd/: Dockerfile
docs/: ACTIVITY_SENDER_COMPONENT.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_DESIGN.md  CI_CD.md  DATABASE_UNIFICATION.md  DESIGN.md  HTTP_SIGNATURES.md  KNOWN_ISSUES.md  KUBERNETES.md
docs/ai/: 001-incoming-pipeline.md  002-delivery-feedback.md  003-timelines.md  004-pkgfed.md  005-bot-marking.md  README.md
e2e/: Dockerfile.mitra  Dockerfile.snac  Dockerfile.test  Dockerfile.test.interop  Makefile  README.md  SNAC2_SETUP.md  docker-compose.e2e.yml  docker-compose.interop.yml  run-activitypub-tests.sh  run-interop.sh  run-local.sh
examples/: sample-actor.json  sample-featured.json  sample-followers.json  sample-following.json
flux/clusters/dev/: oxifed-sync.yaml
k8s/base/: crd-domain.yaml  domainservd.yaml  kustomization.yaml  lavinmq.yaml  mongodb.yaml  operator.yaml  publisherd.yaml  sample-domain.yaml
k8s/overlays/dev/: kustomization.yaml
scripts/: README.md  cleanup.sh  dev-setup.sh  dev.sh  docker-build.sh  format-fix.sh  generate_test_data.sh  test-local.sh
src/: client.rs  database.rs  httpsignature.rs  lib.rs  messaging.rs  pki.rs  webfinger.rs  well_known.rs
test-data/: ed25519_test_key.pem  ed25519_test_public_key.pem  test_dual_mode_actor.json
tests/: domain_integration_test.rs  domain_messaging_test.rs  e2e_federation.rs  e2e_federation_activitypub.rs  e2e_interop.rs  federation_integration_test.rs  rpc_serialization_test.rs  rpc_workflow_test.rs  test_activity_sender.rs
