[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lapin = "2"
deadpool = "0.12"
deadpool-lapin = "0.12"
miette = "7"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
url = { version = "2", features = ["serde"] }

[package]
name = "oxifed"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
ring = "0.17"
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
sha2 = "0.10"
futures = "0.3"
http = "1"
regex = "1"

[dev-dependencies]
mockito = "1"