[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lapin = "2"
deadpool = "0.12"
deadpool-lapin = "0.12"
miette = "7"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
url = { version = "2", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
mongodb = "3.0"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.8"
futures = "0.3"
regex = "1"
rsa = "0.9"
ed25519-dalek = { version = "2.0", features = ["pkcs8"] }
pkcs8 = { version = "0.10", features = ["pem", "encryption"] }
rand = "0.8"
hex = "0.4"

[package]
name = "oxifed"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
ring = "0.17"
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
sha2 = "0.10"
futures = "0.3"
http = "1"
regex = "1"
uuid = { version = "1.6", features = ["v4", "serde"] }
mongodb = "3.0"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.8"
rsa = "0.9"
ed25519-dalek = { version = "2.0", features = ["pkcs8"] }
pkcs8 = { version = "0.10", features = ["pem", "encryption"] }
rand = "0.8"
hex = "0.4"

[dev-dependencies]
mockito = "1"
