[workspace]
members = ["crates/*", "crates/oxifed-operator"]
resolver = "2"

[workspace.package]
version = "0.3.1"
edition = "2024"
description = "A multi-domain ActivityPub platform with a focus on ease of use and high performance."
license = "MPL-2.0"
repository = "https://github.com/oxifed/oxifed"
homepage = "https://github.com/oxifed/oxifed"
documentation = "https://github.com/oxifed/oxifed/blob/main/DOCUMENTATION.md"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lapin = "2"
deadpool = "0.12"
deadpool-lapin = "0.12"
miette = "7"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
url = { version = "2", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
mongodb = "3.0"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.8"
futures = "0.3"
regex = "1"
hex = "0.4"

[workspace.metadata.release]
publish = false
consolidate-commits = true
pre-release-commit-message = "chore: release {{version}}"
tag-message = "chore: release {{version}}"
pre-release-hook = ["git-cliff", "--tag", "{{version}}", "--output", "CHANGELOG.md"]

[package]
name = "oxifed"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
ring = "0.17"
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
sha2 = "0.10"
futures = "0.3"
http = "1"
regex = "1"
uuid = { version = "1.6", features = ["v4", "serde"] }
mongodb = "3.0"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.8"
hex = "0.4"

[dev-dependencies]
mockito = "1"
