[package]
name = "adminservd"
version.workspace = true
edition.workspace = true
description = "Admin API Service for Oxifed"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[[bin]]
name = "adminservd"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
thiserror = { workspace = true }
oxifed = { path = "../.." }
lapin = { workspace = true }
deadpool-lapin = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
tower-http = { workspace = true }
