[package]
name = "domainservd"
version.workspace = true
edition.workspace = true
description = "Domain Service Daemon with WebFinger (RFC 7033) support"

[dependencies]
axum = "0.8"
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror.workspace = true
url.workspace = true
oxifed = { path = "../.." }
