[package]
name = "domainservd"
version.workspace = true
edition.workspace = true
description = "Domain Service Daemon with WebFinger (RFC 7033) support"

[dependencies]
axum = "0.8"
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror.workspace = true
oxifed = { path = "../.." }
mongodb = "3.0.0"
futures = "0.3"
chrono = "0.4"
lapin.workspace = true
deadpool-lapin.workspace = true
url = "2.5.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
regex = "1.10"