[package]
name = "oxiadm"
version.workspace = true
edition.workspace = true
description = "Admin CLI tool for Oxifed"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde_json = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
thiserror = { workspace = true }
tokio = { workspace = true }
oxifed = { path = "../.." }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lapin = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
futures = { workspace = true }
tracing = { workspace = true }
