[package]
name = "oxifed-operator"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "0.98", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24", features = ["v1_31"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
schemars = { version = "0.8", features = ["chrono"] }
chrono = { workspace = true, features = ["serde"] }
miette = { workspace = true }
thiserror = { workspace = true }
