[package]
name = "publisherd"
version.workspace = true
edition.workspace = true

[dependencies]
oxifed = { path = "../.." }
lapin.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror.workspace = true
url = "2.5.4"
futures = "0.3"
