[package]
name = "publisherd"
version.workspace = true
edition.workspace = true
description = "Publisher daemon for ActivityPub message processing"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[[bin]]
name = "publisherd"
path = "src/main.rs"

[dependencies]
oxifed = { path = "../.." }
lapin.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror.workspace = true
url = "2.5.4"
futures = "0.3"
